# epee-encoding

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
epee-encoding-derive/: Cargo.toml
epee-encoding-derive/src/: lib.rs
src/: error.rs  io.rs  lib.rs  marker.rs  serialize.rs  value.rs  varint.rs
tests/: alt_name.rs  duplicate_key.rs  epee_default.rs  flattend.rs  options.rs  p2p.rs  rpc.rs  seq.rs  stack_overflow.rs
