[workspace]
members = [
    "epee-encoding-derive"
]

[package]
name = "epee-encoding"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Boog900"]
readme = "README.md"
keywords = ["monero", "epee", "no-std"]
description = "Epee binary format library."
repository = "https://github.com/Boog900/epee-encoding"
rust-version = "1.60"

[features]
default = ["derive", "std"]
std = ["dep:thiserror"]
derive = ["dep:epee-encoding-derive"]

[dependencies]
sealed = "0.5.0"
epee-encoding-derive = {path = "epee-encoding-derive", version = "0.4", optional=true}
thiserror = {version = "1", optional = true}

[dev-dependencies]
hex = "0.4"
